[package]
name = "pallet-acuity-trusted-accounts"
version = "0.1.0"
description = "FRAME pallet for trusted accounts."
authors = ["Jonathan Brown <jbrown@acuity.social>"]
homepage = "https://acuity.social/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/acuity-social/acuity-trusted-accounts-pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-support = { version = "27.0.0", default-features = false }
frame-system = { version = "27.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
frame-benchmarking = { version = "27.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version = "27.0.0", default-features = false }
sp-io = { version = "29.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
