[package]
name = "pallet-acuity-trusted-accounts-rpc"
version = "0.1.0"
authors = ["Jonathan Brown <jbrown@acuity.social>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://acuity.social/"
repository = "https://github.com/acuity-social/acuity-trusted-accounts-pallet"
description = "RPC interface for the trusted accounts pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
pallet-acuity-trusted-accounts-rpc-runtime-api = { path = "./runtime-api" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
