[package]
name = "pallet-acuity-trusted-accounts-rpc-runtime-api"
version = "0.1.0"
description = "RPC runtime API for trusted accounts FRAME pallet"
authors = ["Jonathan Brown <jbrown@acuity.social>"]
homepage = "https://acuity.social/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/acuity-social/acuity-trusted-accounts-pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false }
sp-api = { version = "25.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"codec/std",
]
